objects/user_id__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>stores the user id</description>
    <fields>
        <fullName>binc_default_initial_reporter_s_user_id__c</fullName>
        <label>BINC Default Initial Reporter&apos;s User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>laurie_morrisey_s_user_id__c</fullName>
        <label>Laurie Morrisey&apos;s User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdr_queue_id__c</fullName>
        <label>MDR Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>melissa_irish_s_user_id__c</fullName>
        <label>MDR User #2 ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>User ID</label>
</CustomObject>